fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,6 +556,7 @@ section {
 }
 .portfolio .portfolio-item {
   margin-bottom: 30px;
+  padding: 0;
 }
 
 .portfolio #portfolio-flters {
@@ -595,6 +596,7 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  margin: 0;
 }
 
 .portfolio .portfolio-wrap::before {
@@ -610,6 +612,12 @@ section {
   opacity: 0;
 }
 
+.portfolio .portfolio-wrap img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 .portfolio .portfolio-wrap .portfolio-links {
   opacity: 1;
   left: 0;
@@ -620,23 +628,6 @@ section {
   transition: all ease-in-out 0.3s;
   display: flex;
   justify-content: center;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
-  font-size: 28px;
-  text-align: center;
-  background: rgba(255, 132, 56, 0.75);
-  transition: 0.3s;
-  width: 50%;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: rgba(255, 132, 56, 0.95);
-}
-
-.portfolio .portfolio-wrap .portfolio-links a+a {
-  border-left: 1px solid #f9ab7a;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -650,6 +641,14 @@ section {
 .portfolio .portfolio-wrap:hover .portfolio-links {
   opacity: 1;
   bottom: 0;
+}
+
+.portfolio-container {
+  margin: 0 -15px;
+}
+
+.portfolio-item {
+  padding: 15px;
 }
 
 /*--------------------------------------------------------------
